--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-1.65MB/s(Youtube:不良林), server: 213.183.53.214, port: 9058, type: ss, cipher: aes-256-cfb, password: dML2sfhbVwvtfNPe}
-  - {name: 波兰-153.2KB/s(Youtube:不良林), server: 217.30.10.63, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇷🇺 俄罗斯联邦-642.6KB/s(Youtube:不良林), server: 213.183.53.221, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
-  - {name: 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林), server: 213.183.53.221, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林), server: 213.183.53.179, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林), server: 213.183.53.207, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 保加利亚-1.72MB/s(Youtube:不良林), server: 213.183.63.221, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 保加利亚-1007.5KB/s(Youtube:不良林), server: 213.183.63.217, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林), server: 213.183.53.177, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 波兰-887.3KB/s(Youtube:不良林), server: 217.30.10.65, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇺🇸 美国-3.41MB/s(Youtube:不良林), server: 167.88.61.50, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-3.44MB/s(Youtube:不良林), server: 38.114.114.69, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林), server: 167.88.63.82, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-2.60MB/s(Youtube:不良林), server: 169.197.142.39, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-3.64MB/s(Youtube:不良林), server: 169.197.142.39, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-3.24MB/s(Youtube:不良林), server: 169.197.142.39, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-2.84MB/s(Youtube:不良林), server: 169.197.142.39, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.65MB/s(Youtube:不良林)
-      - 波兰-153.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-642.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
+      - 保加利亚-1.72MB/s(Youtube:不良林)
+      - 保加利亚-1007.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
+      - 波兰-887.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-1.65MB/s(Youtube:不良林)
-      - 波兰-153.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-642.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
+      - 保加利亚-1.72MB/s(Youtube:不良林)
+      - 保加利亚-1007.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
+      - 波兰-887.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.65MB/s(Youtube:不良林)
-      - 波兰-153.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-642.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
+      - 保加利亚-1.72MB/s(Youtube:不良林)
+      - 保加利亚-1007.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
+      - 波兰-887.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-1.65MB/s(Youtube:不良林)
-      - 波兰-153.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-642.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
+      - 保加利亚-1.72MB/s(Youtube:不良林)
+      - 保加利亚-1007.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
+      - 波兰-887.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.65MB/s(Youtube:不良林)
-      - 波兰-153.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-642.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
+      - 保加利亚-1.72MB/s(Youtube:不良林)
+      - 保加利亚-1007.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
+      - 波兰-887.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.65MB/s(Youtube:不良林)
-      - 波兰-153.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-642.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
+      - 保加利亚-1.72MB/s(Youtube:不良林)
+      - 保加利亚-1007.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
+      - 波兰-887.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.65MB/s(Youtube:不良林)
-      - 波兰-153.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-642.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
+      - 保加利亚-1.72MB/s(Youtube:不良林)
+      - 保加利亚-1007.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
+      - 波兰-887.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
