--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-252.9KB/s(Youtube:不良林), server: 213.183.59.211, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林), server: 185.167.116.24, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
-  - {name: 🇳🇱 荷兰-1.93MB/s(Youtube:不良林), server: 213.183.59.206, port: 9058, type: ss, cipher: aes-256-cfb, password: dML2sfhbVwvtfNPe}
-  - {name: 🇳🇱 荷兰-2.77MB/s(Youtube:不良林), server: 213.183.59.218, port: 9053, type: ss, cipher: aes-256-cfb, password: SBM7R883jBmnqe6C}
-  - {name: 🇦🇺 澳大利亚-628.9KB/s(Youtube:不良林), server: 185.167.116.38, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
-  - {name: 🇺🇸 美国-2.97MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-1.30MB/s(Youtube:不良林), server: 167.88.61.50, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-3.44MB/s(Youtube:不良林), server: 38.114.114.69, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-2.67MB/s(Youtube:不良林), server: 169.197.142.39, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-2.84MB/s(Youtube:不良林), server: 169.197.142.39, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇷🇺 俄罗斯联邦-342.9KB/s(Youtube:不良林), server: 213.183.53.214, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇳🇱 荷兰-346.6KB/s(Youtube:不良林), server: 213.183.59.211, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇦🇺 澳大利亚-1.26MB/s(Youtube:不良林), server: 185.167.116.38, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 保加利亚-193.6KB/s(Youtube:不良林), server: 213.183.63.217, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
+  - {name: 🇳🇱 荷兰-168.5KB/s(Youtube:不良林), server: 213.183.59.206, port: 9058, type: ss, cipher: aes-256-cfb, password: dML2sfhbVwvtfNPe}
+  - {name: 🇺🇸 美国-1.53MB/s(Youtube:不良林), server: 38.68.135.19, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-2.68MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1.88MB/s(Youtube:不良林), server: 167.88.61.50, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-1.02MB/s(Youtube:不良林), server: 38.114.114.69, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-1.53MB/s(Youtube:不良林) 2, server: 169.197.142.39, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-252.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.93MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.77MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-628.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-342.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-346.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.26MB/s(Youtube:不良林)
+      - 保加利亚-193.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-168.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林) 2
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-252.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.93MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.77MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-628.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-342.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-346.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.26MB/s(Youtube:不良林)
+      - 保加利亚-193.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-168.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林) 2
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-252.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.93MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.77MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-628.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-342.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-346.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.26MB/s(Youtube:不良林)
+      - 保加利亚-193.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-168.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林) 2
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-252.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.93MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.77MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-628.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-342.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-346.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.26MB/s(Youtube:不良林)
+      - 保加利亚-193.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-168.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林) 2
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-252.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.93MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.77MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-628.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-342.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-346.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.26MB/s(Youtube:不良林)
+      - 保加利亚-193.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-168.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林) 2
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-252.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.93MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.77MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-628.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-342.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-346.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.26MB/s(Youtube:不良林)
+      - 保加利亚-193.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-168.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林) 2
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-252.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.93MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.77MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-628.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-342.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-346.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.26MB/s(Youtube:不良林)
+      - 保加利亚-193.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-168.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林) 2
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
